--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     <div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
+      <div>ball</div>
+      <div>cat</div>
+      <div>dog</div>
+      <div>elephant</div>
+      <div>fish</div>
     </div>
   </body>
 </html>
