--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       <div>dog</div>
       <div>elephant</div>
       <div>fish</div>
+      <div>elephant</div>
+      <div>fish</div>
     </div>
   </body>
 </html>
