--- a/index.html
+++ b/index.html
@@ -3,18 +3,400 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="style.css" />
+    <title>Movie</title>
   </head>
   <body>
-    <div>
-      <div>ball</div>
-      <div>cat</div>
-      <div>dog</div>
-      <div>elephant</div>
-      <div>fish</div>
-      <div>elephant</div>
-      <div>fish</div>
+    <!-- navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark fs-6 bg-dark">
+      <div class="container-fluid">
+        <span class="navbar-brand fw-bold fs-1">
+          <i class="logo bi bi-film me-3"></i><span class="me-4">Movies</span>
+        </span>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <form class="d-flex me-auto mb-2 mb-lg-0 mb-md-3">
+            <input
+              class="form-control me-2 text-white fs-5 ps-3 rounded-pill"
+              type="search"
+              placeholder="Search"
+              aria-label="Search"
+            />
+            <button class="btn btn-outline-danger rounded-circle" type="submit">
+              <i class="bi bi-search"></i>
+            </button>
+          </form>
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"
+                ><i class="bi bi-lightning-charge me-1"></i>Upcoming</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"
+                ><i class="bi bi-fire me-1"></i>Trending</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"
+                ><i class="bi bi-hearts me-1"></i>wishlist</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"
+                ><i class="bi bi-person-circle d-lg-none me-1"></i
+                ><span class="d-lg-none">profile</span>
+              </a>
+            </li>
+          </ul>
+          <a href="" class="profile"
+            ><i class="bi bi-person-circle fs-2"></i
+          ></a>
+        </div>
+      </div>
+    </nav>
+    <!-- carolas -->
+    <div
+      id="carouselExampleSlidesOnly"
+      class="carousel slide"
+      data-bs-ride="carousel"
+    >
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="images/dark.webp" class="d-block w-100" alt="dark series" />
+        </div>
+        <div class="carousel-item">
+          <img
+            src="images/ST.webp"
+            class="d-block w-100"
+            alt="Stranger Things"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            src="images/vd.webp"
+            class="d-block w-100"
+            alt="Attack On Titan"
+          />
+        </div>
+      </div>
     </div>
+    <!-- catogery -->
+    <div
+      class="container-fluid catagory boxx p-3 d-flex justify-content-between flex-wrap"
+    >
+      <button
+        class="btn btn-outline-danger bg-dark p-2 px-4 mb-lg-0 mb-3 rounded"
+        type="button"
+      >
+        Thriller
+      </button>
+      <button
+        class="btn btn-outline-danger bg-dark p-2 px-4 mb-lg-0 mb-3 rounded"
+        type="button"
+      >
+        Horror
+      </button>
+      <button
+        class="btn btn-outline-danger bg-dark p-2 px-4 mb-lg-0 mb-3 rounded"
+        type="button"
+      >
+        Comedy
+      </button>
+      <button
+        class="btn btn-outline-danger bg-dark p-2 px-4 mb-lg-0 mb-3 rounded"
+        type="button"
+      >
+        Anime
+      </button>
+      <button
+        class="btn btn-outline-danger bg-dark p-2 px-4 mb-lg-0 mb-3 rounded"
+        type="button"
+      >
+        Thriller
+      </button>
+    </div>
+    <!-- movie list -->
+    <div
+      class="container-fluid boxx d-flex justify-content-between flex-wrap p-4"
+    >
+      <div class="card d-flex rounded mb-5" style="width: 18rem">
+        <img src="images/slow-horses.webp" class="card-img-top" alt="..." />
+        <div class="card-body p-1">
+          <p class="fs-6 mb-1 ratings">
+            <i class="bi bi-star-fill me-1"></i
+            ><i class="bi bi-star-fill me-1"></i
+            ><i class="bi bi-star-fill me-1"></i><i class="bi bi-star me-1"></i
+            ><i class="bi bi-star me-1"></i>
+          </p>
+          <h5 class="card-title">Slow Horses</h5>
+          <h6>(Season 5, 2025)</h6>
+          <p class="card-text">
+            Spy thriller / action-drama – Brits in the MI5 “also-ranks” unit.
+            Critically very well received (79 Metascore for Season 5) though
+            user scores show mixed feelings.
+          </p>
+
+          <div class="btnn slt-box d-flex justify-content-around">
+            <a
+              href="#"
+              class="btn slt btn-outline-danger bg-dark p-2 px-3 mb-3 rounded-pill"
+              ><i class="bi bi-play-circle me-2 text-white fs-5 soc"></i
+              >Watch</a
+            >
+            <a
+              href="#"
+              class="btn slt btn-outline-danger bg-dark p-2 px-3 mb-3 rounded-pill"
+              ><i class="bi bi-hearts me-2 text-white fs-5 soc"></i>wishlist</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="card d-flex rounded mb-5" style="width: 18rem">
+        <img src="images/cassandra.webp" class="card-img-top" alt="..." />
+        <div class="card-body p-1">
+          <p class="fs-6 mb-1 ratings">
+            <i class="bi bi-star-fill me-1"></i
+            ><i class="bi bi-star-fill me-1"></i><i class="bi bi-star me-1"></i
+            ><i class="bi bi-star me-1"></i><i class="bi bi-star me-1"></i>
+          </p>
+          <h5 class="card-title">Cassandra</h5>
+          <h6>(2025)</h6>
+          <p class="card-text">
+            German sci-fi thriller: a family moves into an old smart home, the
+            AI assistant awakens. Why pick it: compact (6 episodes), fresh
+            concept (AI home, thriller vibe) Caveat: Not a top tier IMDb-classic
+            yet; might feel uneven in parts.
+          </p>
+
+          <div class="btnn slt-box d-flex justify-content-around">
+            <a
+              href="#"
+              class="btn slt btn-outline-danger bg-dark p-2 px-3 mb-3 rounded-pill"
+              ><i class="bi bi-play-circle me-2 text-white fs-5 soc"></i
+              >Watch</a
+            >
+            <a
+              href="#"
+              class="btn slt btn-outline-danger bg-dark p-2 px-3 mb-3 rounded-pill"
+              ><i class="bi bi-hearts me-2 text-white fs-5 soc"></i>wishlist</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="card d-flex rounded mb-5" style="width: 18rem">
+        <img src="images/str-thng.webp" class="card-img-top" alt="..." />
+        <div class="card-body p-1">
+          <p class="fs-6 mb-1 ratings">
+            <i class="bi bi-star-fill me-1"></i
+            ><i class="bi bi-star-fill me-1"></i
+            ><i class="bi bi-star-fill me-1"></i
+            ><i class="bi bi-star-fill me-1"></i><i class="bi bi-star me-1"></i>
+          </p>
+          <h5 class="card-title">Stranger Things</h5>
+          <h6>(Season 5, 2025)</h6>
+          <p class="card-text">
+            With Winona Ryder, David Harbour, Finn Wolfhard, Millie Bobby Brown.
+            In 1980s Indiana, a group of young friends witness supernatural
+            forces and secret government exploits. As they search
+          </p>
+
+          <div class="btnn slt-box d-flex justify-content-around">
+            <a
+              href="#"
+              class="btn slt btn-outline-danger bg-dark p-2 px-3 mb-3 rounded-pill"
+              ><i class="bi bi-play-circle me-2 text-white fs-5 soc"></i
+              >Watch</a
+            >
+            <a
+              href="#"
+              class="btn slt btn-outline-danger bg-dark p-2 px-3 mb-3 rounded-pill"
+              ><i class="bi bi-hearts me-2 text-white fs-5 soc"></i>wishlist</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="card d-flex rounded mb-5" style="width: 18rem">
+        <img src="images/dark-1.webp" class="card-img-top" alt="..." />
+        <div class="card-body p-1">
+          <p class="fs-6 mb-1 ratings">
+            <i class="bi bi-star-fill me-1"></i
+            ><i class="bi bi-star-fill me-1"></i
+            ><i class="bi bi-star-fill me-1"></i
+            ><i class="bi bi-star-fill me-1"></i><i class="bi bi-star me-1"></i>
+          </p>
+          <h5 class="card-title">Dark</h5>
+          <h6>(Season 4, 2022)</h6>
+          <p class="card-text">
+            Dark is a German science fiction mystery thriller television series
+            created by Baran bo Odar and Jantje Friese, which aired on Netflix
+            from 1 December 2017 to 27 June 2020 across three seasons.
+          </p>
+
+          <div class="btnn slt-box d-flex justify-content-around">
+            <a
+              href="#"
+              class="btn slt btn-outline-danger bg-dark p-2 px-3 mb-3 rounded-pill"
+              ><i class="bi bi-play-circle me-2 text-white fs-5 soc"></i
+              >Watch</a
+            >
+            <a
+              href="#"
+              class="btn slt btn-outline-danger bg-dark p-2 px-3 mb-3 rounded-pill"
+              ><i class="bi bi-hearts me-2 text-white fs-5 soc"></i>wishlist</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="card d-flex rounded mb-5" style="width: 18rem">
+        <img src="images/aot.webp" class="card-img-top" alt="..." />
+        <div class="card-body p-1">
+          <p class="fs-6 mb-1 ratings">
+            <i class="bi bi-star-fill me-1"></i
+            ><i class="bi bi-star-fill me-1"></i
+            ><i class="bi bi-star-fill me-1"></i><i class="bi bi-star me-1"></i
+            ><i class="bi bi-star me-1"></i>
+          </p>
+          <h5 class="card-title">Attack On Titen</h5>
+          <h6>(Season 4, 2023)</h6>
+          <p class="card-text">
+            Attack on Titan (Japanese: 進撃の巨人, Hepburn: Shingeki no Kyojin;
+            lit. "The Advancing Giant(s)") is a Japanese dark fantasy anime
+            television series based on Hajime Isayama's manga of the same name.
+            The series is set in a post-apocalyptic
+          </p>
+
+          <div class="btnn slt-box d-flex justify-content-around">
+            <a
+              href="#"
+              class="btn slt btn-outline-danger bg-dark p-2 px-3 mb-3 rounded-pill"
+              ><i class="bi bi-play-circle me-2 text-white fs-5 soc"></i
+              >Watch</a
+            >
+            <a
+              href="#"
+              class="btn slt btn-outline-danger bg-dark p-2 px-3 mb-3 rounded-pill"
+              ><i class="bi bi-hearts me-2 text-white fs-5 soc"></i>wishlist</a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- membership -->
+    <div class="container-fluid membership boxx">
+      <h2 class="text-white p-5">
+        <i class="bi bi-person-fill-check me-2 text-white fs-3"></i>membership
+      </h2>
+      <div
+        class="container-fluid slt-box d-flex justify-content-around flex-wrap p-4"
+      >
+        <div class="card slt mb-4 me-3" style="width: 18rem">
+          <div class="card-body">
+            <h5 class="card-title">6 Month</h5>
+            <h6 class="card-subtitle mb-2">
+              <i class="bi bi-currency-rupee me-1"></i>599
+            </h6>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <a
+              href="#"
+              class="btn btn-outline-danger bg-dark p-2 px-3 mb-3 rounded-pill"
+              >Buy Now</a
+            >
+          </div>
+        </div>
+        <div class="card slt mb-4 me-3" style="width: 18rem">
+          <div class="card-body">
+            <h5 class="card-title">1 Year</h5>
+            <h6 class="card-subtitle mb-2">
+              <i class="bi bi-currency-rupee me-1"></i>1099
+            </h6>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <a
+              href="#"
+              class="btn btn-outline-danger bg-dark p-2 px-3 mb-3 rounded-pill"
+              >Buy Now</a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- footer -->
+    <div class="container-fluid boxx p-5 d-flex justify-content-between">
+      <div class="text-white contect">
+        <h3>Contect us</h3>
+        <p>#00 1st main 4th cross xyz layout benglore-560000</p>
+        <p>
+          <a href="#" class="me-3 text-white fs-3 soc"
+            ><i class="bi bi-facebook"></i></a
+          ><a href="#" class="me-3 text-white fs-3 soc"
+            ><i class="bi bi-instagram"></i></a
+          ><a href="#" class="me-3 text-white fs-3 soc"
+            ><i class="bi bi-github"></i></a
+          ><a href="#" class="me-3 text-white fs-3 soc"
+            ><i class="bi bi-twitter-x"></i
+          ></a>
+        </p>
+      </div>
+      <div class="text-white about">
+        <h3>About</h3>
+        <div class="d-flex flex-column text-decoration-none">
+          <a href="#" class="text-decoration-none">About us</a
+          ><a href="#" class="text-decoration-none">Privacy policy</a
+          ><a href="#" class="text-decoration-none">Term & Conditions</a
+          ><a href="#" class="text-decoration-none">Contect Us</a>
+        </div>
+      </div>
+      <div class="text-white myaccount">
+        <h3>My Account</h3>
+        <div class="d-flex flex-column text-decoration-none">
+          <a href="#" class="text-decoration-none">Sign in</a
+          ><a href="#" class="text-decoration-none">My wishlist</a
+          ><a href="#" class="text-decoration-none">Help</a>
+        </div>
+      </div>
+    </div>
+    <footer class="container-fluid text-white text-center p-3">
+      <p>&copy; 2025 made my kowshik</p>
+    </footer>
   </body>
 </html>
